directsoundsrc: Correctly cast mixer to uintptr

https://bugzilla.gnome.org/show_bug.cgi?id=773720